Picture displays smaller. Set classes.

--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,7 @@
 <!doctype html>
     <title>Prediction</title>
     <body>
-        <img src="../static/{{ user_image }}" alt="my pic"> 
+        <img src="../static/{{ user_image }}" alt="my pic" style="width: 50%; height: 50%"/> 
         <p>Your image is of a {{ result }}!</p>
     </body>
     
