--- a/templates/result.html
+++ b/templates/result.html
@@ -1,13 +1,20 @@
-<!doctype html>
-    <title>Prediction</title>
-    <body>
-        <img src="../static/{{ user_image }}" alt="my pic" style="width: 50%; height: 50%"/> 
-        <p>Your image is of a {{ result }}!</p>
-    </body>
-    
-    
-    <h3>Upload new File</h3>
-    <form method=post enctype=multipart/form-data>
-      <p><input type=file name=file>
-         <input type=submit value=Upload>
-    </form>
+<!DOCTYPE html>
+<html>
+<head>
+
+	<style>
+	          body {
+	            background-color: #7aeeff
+	          }
+	</style>
+	<title>Prediction</title>
+</head>
+<body>
+	<p align="center"><font color="black" face="Arial" size="4">Your image is of a {{ result }}!</font></p>
+	<p align="center"><img alt="my pic" src="../static/{{ user_image }}" style="width: 50%; height: 50%"></p><br>
+	<p align="center"><font color="black" face="Arial" size="4">Upload new File</font></p>
+	<form enctype="multipart/form-data" method="post">
+		<p align="center"><font color="black" face="Arial" size="4"><input name="file" type="file"> <input type="submit" value="Upload"></font></p>
+	</form>
+</body>
+</html>
